# jansathi

./: .env  .gitignore  CONVERSION_SUMMARY.md  README.md  app.json  babel.config.js  index.html  package-lock.json  package-rn.json  package-web.json  package.json  tailwind.config.js  tsconfig-rn.json
.github/: copilot-instructions.md
app/: _layout.tsx  auth.tsx  create-report.tsx  electricity-issue.tsx  garbage-issue.tsx  index.tsx  road-issue.tsx  water-issue.tsx
components/: BackHeader.tsx  ElectricityIssue.tsx  GarbageIssue.tsx  Header.tsx  LanguageSwitcher.tsx  LocationMap.tsx  MainMenu.tsx  MenuCard.tsx  PhotoCapture.tsx  QuickActionItem.tsx  RoadIssue.tsx  WaterIssue.tsx
config/: translations.ts
contexts/: LanguageContext.tsx
docs/: TYPOGRAPHY_GUIDE.md  setup.md
jansarthi-core/: README.md  main.py  pyproject.toml
jansarthi-core/alembic/: env.py
jansarthi-core/alembic/versions/: 2024121601_add_clustering_tables.py  3ca25aeb007d_initial_migration_create_issues_tables.py  559594138120_initial_migration.py  7bfb1713bec3_add_authentication_otp_table_and_user_.py  a1b2c3d4e5f6_add_is_admin_field_to_users.py  e235db0401df_initial_migration.py
jansarthi-core/app/: __init__.py  database.py  main.py
jansarthi-core/app/models/: __init__.py  cluster.py  issue.py
jansarthi-core/app/routes/: auth.py  cluster.py  parshad.py  pradhan.py  pwd.py  reports.py
jansarthi-core/app/schemas/: __init__.py  admin.py  auth.py  cluster.py  issue.py
jansarthi-core/app/services/: auth.py  clustering.py  storage.py  twilio.py
jansarthi-core/app/settings/: config.py
(+102 files in other folders)
